--- a/index.html
+++ b/index.html
@@ -6,10 +6,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculator</title>
   <script src="script.js"></script>
+  <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
-
+  <div id="container" class="container">
+    <div id="calculator">
+      <div id="display">
+        <p></p>
+      </div>
+      <div id="buttons-container" class="buttons-container">
+        <ul class="buttons-list">
+          <li>
+            <button>Clear</button>
+            <button>Back</button>
+            <button>+</button>
+            <button>-</button>
+          </li>
+          <li>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>*</button>
+          </li>
+          <li>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>/</button>
+          </li>
+          <li>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>=</button>
+          </li>
+          <li>
+            <button>0</button>
+            <button>.</button>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
